# qemu

./: .cirrus.yml  .dir-locals.el  .gitignore  .gitlab-ci-gating.yml  .gitlab-ci.yml  .shippable.yml  .travis.yml  CODING_STYLE.rst  MAINTAINERS  Makefile  Makefile.objs  Makefile.target  README.md  VERSION  aie-helper.c  aie.c  aio-posix.c  aio-win32.c  android-console.c  android-console.h  arch_init.c  async.c  blacklist.tsan  block.c  blockdev-nbd.c  blockdev.c  blockjob.c  configure  cpu-exec-common.c  cpu-exec.c  cpus-common.c  cpus.c  cputlb.c  disas.c  exec.c  gdbstub.c  hmp-commands-info.hx  hmp-commands.hx  hmp.c  kvm-all.c  (+40 more)
.gitlab-ci.d/: buildtest-template.yml  buildtest.yml  cirrus.yml  container-cross.yml  containers.yml  crossbuilds.yml  custom-runners.yml
accel/: Kconfig  accel-common.c  meson.build
backends/: vhost-user.c
block/: backup.c  block-backend.c  io.c  mirror.c  qapi.c  qcow2-snapshot.c  qcow2.c  qcow2.h  qed.c  quorum.c  raw-posix.c  sheepdog.c  snapshot.c  stream.c  vmdk.c
bsd-user/: elfload.c  main.c  mmap.c  qemu.h  syscall.c
chardev/: char.c
default-configs/: aarch64-common.mak  aarch64-linux-user.mak  aarch64-softmmu.mak  arm-softmmu.mak  i386-softmmu.mak  mips-softmmu.mak  mips64-softmmu.mak  mips64el-softmmu.mak  mipsel-softmmu.mak  x86_64-softmmu.mak
docs/: conf.py  multi-thread-tcg.txt  replay.txt  tracing.txt
fpu/: Makefile.objs  softfloat-macros.h  softfloat-parts-addsub.c.inc  softfloat-parts.c.inc  softfloat-specialize.c.inc  softfloat-specialize.h  softfloat.c
gdbstub/: gdbstub.c  trace-events
hw/cxl/: meson.build
include/: qemu-common.h  qjson.h  trace.h
linux-user/: clone.c  elfload.c  exit.c  main.c  mmap.c  signal.c  syscall.c  syscall_defs.h
migration/: Makefile.objs  block.c  migration.c  qemu-file.c  ram.c  savevm.c  vmstate.c
monitor/: hmp-cmds-target.c  hmp-target.c  misc.c
net/: slirp.c
plugin-examples/: Makefile  bbcount_avgsize_racy.c  mem_count_racy_both.c
plugins/: Makefile.objs  api.c  core.c  plugin.h  qemu-plugins.symbols
qapi/: Makefile.objs  block-core.json  machine.json  meson.build  misc.json  qapi-schema.json  replay.json
qom/: cpu.c
registers/: api.c  core.c  gdb.c  internals.h  meson.build  text.c
replay/: replay-debugging.c  replay-internal.c  replay-internal.h  replay.c
scripts/: analyse-tcg-execution.py  analyse-tlb-flushes-simpletrace.py  analyze-inclusions  analyze-migration.py  checkpatch.pl  get_maintainer.pl  kernel-doc  macosx-brew.sh  (+9 more)
tests/plugin/: Makefile  bb.c  cc.cc  empty.c  hotblocks.c  hotpages.c  howvec.c  hwprofile.c  inline.c  insn.c  mem.c  meson.build
tools/: meson.build
tools/vhost-user-rpmb/: Makefile.objs  main.c  meson.build
(+1154 files in other folders)
